@@ -152,30 +152,24 @@ class tx_srfeuserregister_model_field_usergroup  extends tx_srfeuserregister_mod
 	) {
 		$whereClause = '';
 		$subgroupWhereClauseArray = array();
-
-		if (($cmdKey == 'edit' || $cmdKey == 'invite') && $conf[$cmdKey . '.']['keepUnselectableUserGroups']) {
-			// If in edit or invite mode, we keep user groups from any pid
-			$whereClause = ' 1=1';
-		} else {
-			$pidArray = array();
-			$tmpArray = t3lib_div::trimExplode(',', $conf['userGroupsPidList'], 1);
-			if (count($tmpArray)) {
-				foreach ($tmpArray as $value) {
-					$valueIsInt = (
-						class_exists('t3lib_utility_Math') ?
-						t3lib_utility_Math::canBeInterpretedAsInteger($value) :
-						t3lib_div::testInt($value)
-					);
-					if ($valueIsInt) {
-						$pidArray[] = intval($value);
-					}
+		$pidArray = array();
+		$tmpArray = t3lib_div::trimExplode(',', $conf['userGroupsPidList'], 1);
+		if (count($tmpArray)) {
+			foreach ($tmpArray as $value) {
+				$valueIsInt = (
+					class_exists('t3lib_utility_Math') ?
+					t3lib_utility_Math::canBeInterpretedAsInteger($value) :
+					t3lib_div::testInt($value)
+				);
+				if ($valueIsInt) {
+					$pidArray[] = intval($value);
 				}
 			}
-			if (count($pidArray) > 0) {
-				$whereClause = ' pid IN (' . implode(',', $pidArray) . ') ';
-			} else {
-				$whereClause = ' pid=' . intval($pid) . ' ';
-			}
+		}
+		if (count($pidArray) > 0) {
+			$whereClause = ' pid IN (' . implode(',', $pidArray) . ') ';
+		} else {
+			$whereClause = ' pid=' . intval($pid) . ' ';
 		}
 
 		$whereClausePart2 = '';
@@ -216,6 +210,7 @@ class tx_srfeuserregister_model_field_usergroup  extends tx_srfeuserregister_mod
 
 		return $whereClause;
 	}
+
 
 	public function parseOutgoingData (
 		$theTable,
